# ray_tracing

./: CMakeLists.txt  README.md  main.cpp
data/: example.render  example.scene  example2.render  example3.scene
model/config/: CMakeLists.txt  ConfigKeeper.cpp  ConfigKeeper.h  SceneKeeper.cpp  SceneKeeper.h
model/engine/: Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Figure.cpp  Figure.h  Figure.h.cpp  FilledRenderStrategy.cpp  FilledRenderStrategy.h  Quadrangle.cpp  Quadrangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  WireframeRenderStrategy.cpp  WireframeRenderStrategy.h  optics.h  renderStrategy.h
view/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RenderArea.cpp  RenderArea.h  resources.qrc
view/resources/: README.md
